@@ -83,6 +83,22 @@ class AndroidCommonConventionPlugin : Plugin<Project> {
                     unitTests {
                         isReturnDefaultValues = true
                         isIncludeAndroidResources = true
+                        all {
+                            // https://robolectric.org/getting-started/#running-with-java-17-and-higher
+                            // the JVM requires --add-opens flags so that Robolectric can access internal
+                            // OpenJDK classes and APIs (java.lang, java.io, jdk.internal.access, etc.)
+                            it.jvmArgs(
+                                "--add-opens=java.base/java.lang=ALL-UNNAMED",
+                                "--add-opens=java.base/java.util=ALL-UNNAMED",
+                                "--add-opens=java.base/java.io=ALL-UNNAMED",
+                                "--add-opens=java.base/java.net=ALL-UNNAMED",
+                                "--add-opens=java.base/java.security=ALL-UNNAMED",
+                                "--add-opens=java.base/java.text=ALL-UNNAMED",
+                                "--add-opens=java.base/jdk.internal.access=ALL-UNNAMED",
+                                "--add-opens=java.desktop/java.awt.font=ALL-UNNAMED",
+                                "--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+                            )
+                        }
                     }
                 }
 
@@ -152,6 +168,7 @@ class AndroidCommonConventionPlugin : Plugin<Project> {
                     "testImplementation"(libs.turbine)
                     "testImplementation"(libs.hilt.android.testing)
                     "testImplementation"(libs.classgraph)
+                    "testImplementation"(libs.androidx.test.espresso.core)
 
                     "testImplementation"(project(":testing-unit"))
 
